kubernetes/consumerService-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: consumerservice
  labels:
    app: consumerservice
spec:
  type: NodePort
  selector:
    app: consumerservice
  ports:
  - protocol: TCP
    port: 8080
    name: http
