kubernetes/testDeploy-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: testdeploy
  labels:
    app: testdeploy
spec:
  type: NodePort
  selector:
    app: testdeploy
  ports:
  - protocol: TCP
    port: 8080
    name: http
