kubernetes/userService-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: userservice
  labels:
    app: userservice
spec:
  type: NodePort
  selector:
    app: userservice
  ports:
  - protocol: TCP
    port: 8080
    name: http
