kubernetes/virtualservice-external.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-services
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
#  - match:
#    - uri:
#        exact: /
#    - uri:
#        exact: /consumer
#    - uri:
#        exact: /supplier
#    - uri:
#        exact: /admin
#    - uri:
#        prefix: /static
#    - uri:
#        regex: '^.*\.(ico|png|jpg)$'
#    route:
#    - destination:
#        host: frontend
#        port:
#          number: 80
  - match:
    - uri:
        regex: /api/test.*
    route:
    - destination:
        host: testdeploy-lb
        port:
          number: 8080
  - match:
    - uri:
        regex: /api/users.*
    route:
    - destination:
        host: consumer-lb
        port:
          number: 8080
  - match:
    - uri:
        regex: /api/payments.*
    - uri:
        regex: /api/offers.*
    route:
    - destination:
        host: payment-lb
        port:
          number: 8080
  - match:
    - uri:
        regex: /api/invoice.*
    route:
    - destination:
        host: invoice-lb
        port:
          number: 8080
